fixed gap resizing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: roboto, sans-serif;
+  font-family: comfortaa, roboto, sans-serif;
   font-size: 50px;
   background-color: #333;
   display: flex;
@@ -25,7 +25,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 5%;
   align-items: center;
 }
 
@@ -35,6 +35,7 @@ div#text {
 }
 
 button {
+  font-family: comfortaa, roboto, sans-serif;
   background-color: #055;
   border: none;
   border-radius: 5px;
